# bracket_circuito_das_flores_psql

./: .gitignore  app.py  backend.py  connection.py  initial_state.pkl  main.py  pyproject.toml  requirements.txt
sql/: ddl_tb_state.dbquery.ipynb
